--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 103</th>
-			<td>Scheduled for 1 block.</td>
+			<td>1/1 block! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 102</th>
