--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 105</th>
+			<td>Scheduled for 1 block.</td>
+		</tr>
+		<tr>
+			<th>Epoch 104</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
 			<th>Epoch 103</th>
 			<td>1/1 block! シ</td>
 		</tr>
