Epoch 105: 1/1 block! Epoch 106: Scheduled for 1 block.

--- a/index.html
+++ b/index.html
@@ -142,8 +142,12 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
-			<th>Epoch 105</th>
+			<th>Epoch 106</th>
 			<td>Scheduled for 1 block.</td>
+		</tr>
+		<tr>
+			<th>Epoch 105</th>
+			<td>1/1 block! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 104</th>
