--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 106</th>
-			<td>Scheduled for 1 block.</td>
+			<td>0/1 block<br>This is why we can't have nice things.<br>Turning off Rosetta@home and Folding@home. ●︿●</td>
 		</tr>
 		<tr>
 			<th>Epoch 105</th>
