--- a/index.html
+++ b/index.html
@@ -142,6 +142,22 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 110</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
+			<th>Epoch 109</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
+			<th>Epoch 108</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
+			<th>Epoch 107</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
 			<th>Epoch 106</th>
 			<td>0/1 block<br>This is why we can't have nice things.<br>Turning off Rosetta@home and Folding@home. ●︿●</td>
 		</tr>
