--- a/index.html
+++ b/index.html
@@ -142,6 +142,18 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 113</th>
+			<td>1/1 block! シ</td>
+		</tr>
+		<tr>
+			<th>Epoch 112</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
+			<th>Epoch 111</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
 			<th>Epoch 110</th>
 			<td>0/0 blocks</td>
 		</tr>
