--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@ td {
 			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
 		</tr>
 		<tr>
+			<th>Epoch 120</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
+			<th>Epoch 119</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
 			<th>Epoch 118</th>
 			<td>0/0 blocks</td>
 		</tr>
