Epoch 122 & 123: 1/1 blocks! (each)

--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@ td {
 			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
 		</tr>
 		<tr>
+			<th>Epoch 123</th>
+			<td>1/1 block! シ</td>
+		</tr>
+		<tr>
+			<th>Epoch 122</th>
+			<td>1/1 block! シ</td>
+		</tr>
+		<tr>
 			<th>Epoch 121</th>
 			<td>0/0 blocks</td>
 		</tr>
