Updated error report for epoch 88.

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ td {
 		</tr>
 		<tr>
 			<th>Epoch 88</th>
-			<td><a href="https://www.youtube.com/watch?v=MIZbGSXeWWE">4/5 blocks</a><br><a href="https://kaze-stake.github.io/error_report_epoch_88.txt">Error report &amp; refund</a></td>
+			<td>4/5 blocks<br>An error caused Jörmungandr to become unresponsive, thus not being able to mint the block at all. It seems that this error was caused by a combination of a newer version JorManager and Jörmungandr 0.8.9-stable-alpha-6. This error has not occured again since upgrading Jörmungandr.</td>
 		</tr>
 		<tr>
 			<th>Epoch 87</th>
