--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@ td {
 			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
 		</tr>
 		<tr>
+			<th>Epoch 133</th>
+			<td>4/4 blocks! シ<br>Competitive: W-1, L-0</td>
+		</tr>
+		<tr>
 			<th>Epoch 132</th>
 			<td>4/5 blocks<br>Competitive: W-2, L-1</td>
 		</tr>
