Added competitive height battle win

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ td {
 		</tr>
 		<tr>
 			<th>Epoch 136</th>
-			<td>6/6 blocks! シ</td>
+			<td>6/6 blocks! シ<br>Competitive: W-1, L-0</td>
 		</tr>
 		<tr>
 			<th>Epoch 135</th>
