--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@ td {
 		</tr>
 		<tr>
 			<th>Epoch 136</th>
+			<td>7/7 blocks! シ</td>
+		</tr>
+		<tr>
+			<th>Epoch 136</th>
 			<td>6/6 blocks! シ<br>Competitive: W-1, L-0</td>
 		</tr>
 		<tr>
