--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@ td {
 			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
 		</tr>
 		<tr>
+			<th>Epoch 141</th>
+			<td>5/6 blocks<br>Competitive: W-1, L-1</td>
+		</tr>
+		<tr>
+			<th>Epoch 140</th>
+			<td>5/5 blocks! シ</td>
+		</tr>
+		<tr>
 			<th>Epoch 139</th>
 			<td>11/11 blocks! シ</td>
 		</tr>
