--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@ td {
 			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
 		</tr>
 		<tr>
+			<th>Epoch 145</th>
+			<td>3/3 blocks! シ<br>Competitive: W-2, L-0</td>
+		</tr>
+		<tr>
+			<th>Epoch 144</th>
+			<td>1/1 block! シ</td>
+		</tr>
+		<tr>
 			<th>Epoch 143</th>
 			<td>7/7 blocks! シ</td>
 		</tr>
