--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@ td {
 			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
 		</tr>
 		<tr>
+			<th>Epoch 150</th>
+			<td>6/6 blocks! シ<br>Competitive: W-2, L-0</td>
+		</tr>
+		<tr>
 			<th>Epoch 149</th>
 			<td>6/6 blocks! シ</td>
 		</tr>
