--- a/index.html
+++ b/index.html
@@ -146,6 +146,18 @@ td {
 			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
 		</tr>
 		<tr>
+			<th>Epoch 153</th>
+			<td>2/2 blocks! シ</td>
+		</tr>
+		<tr>
+			<th>Epoch 152</th>
+			<td>5/5 blocks! シ<br>Competitive: W-1, L-0</td>
+		</tr>
+		<tr>
+			<th>Epoch 151</th>
+			<td>3/3 blocks! シ</td>
+		</tr>
+		<tr>
 			<th>Epoch 151</th>
 			<td>3/3 blocks! シ</td>
 		</tr>
