--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@ td {
 			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
 		</tr>
 		<tr>
+			<th>Epoch 156</th>
+			<td>0/1 blocks<br>Leader node got stuck and was 5 minutes slow to respond after 3 days up and running. Nothing else was running on the server when this happened. Looking into solutions.</td>
+		</tr>
+		<tr>
 			<th>Epoch 155</th>
 			<td>3/3 blocks! シ</td>
 		</tr>
