--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ td {
 		</tr>
 		<tr>
 			<th>Epoch 156</th>
-			<td>0/1 blocks<br>Leader node got stuck and was 5 minutes slow to respond after 3 days up and running. Nothing else was running on the server when this happened. Looking into solutions.</td>
+			<td>0/1 block<br>Leader node got stuck and was 5 minutes slow to respond after 3 days up and running. Nothing else was running on the server when this happened. Looking into solutions.</td>
 		</tr>
 		<tr>
 			<th>Epoch 155</th>
