--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@ td {
 			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
 		</tr>
 		<tr>
+			<th>Epoch 159</th>
+			<td>4/5 blocks<br>Competitive: W-0, L-1</td>
+		</tr>
+		<tr>
+			<th>Epoch 158</th>
+			<td>7/7 blocks! シ</td>
+		</tr>
+		<tr>
 			<th>Epoch 157</th>
 			<td>6/6 blocks! シ</td>
 		</tr>
