Updated Jörmungandr to 0.8.19

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ td {
 		</tr>
 		<tr>
 			<th>Jörmungandr Version</th>
-			<td>0.8.18</td>
+			<td>0.8.19</td>
 		</tr>
 		<tr>
 			<th>Node Manager</th>
@@ -159,7 +159,7 @@ td {
 		</tr>
 		<tr>
 			<th>Epoch 156</th>
-			<td>0/1 block<br>Leader node got stuck and was 5 minutes slow to respond after 3 days up and running. Nothing else was running on the server when this happened. Looking into solutions.</td>
+			<td>0/1 block<br>Leader node got stuck and was 5 minutes slow to respond after 3 days up and running. Nothing else was running on the server when this happened.<br>UPDATE: Updated to 0.8.19</td>
 		</tr>
 		<tr>
 			<th>Epoch 155</th>
