--- a/index.html
+++ b/index.html
@@ -146,8 +146,16 @@ td {
 			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
 		</tr>
 		<tr>
+			<th>Epoch 165</th>
+			<td>1/2 blocks<br>Competitive: W-0, L-1</td>
+		</tr>
+		<tr>
+			<th>Epoch 164</th>
+			<td>4/4 blocks! シ</td>
+		</tr>
+		<tr>
 			<th>Epoch 163</th>
-			<td>1/1 blocks! シ</td>
+			<td>1/1 block! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 162</th>
