Simplfied Statistics and removed History

--- a/index.html
+++ b/index.html
@@ -142,418 +142,10 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
-			<th><a style="font-weight: normal;" href="https://adapools.org/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">AdaPools</a></th>
-			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
-		</tr>
-		<tr>
-			<th>Epoch 166</th>
-			<td>2/2 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 165</th>
-			<td>1/2 blocks<br>Competitive: W-0, L-1</td>
-		</tr>
-		<tr>
-			<th>Epoch 164</th>
-			<td>4/4 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 163</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 162</th>
-			<td>5/5 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 161</th>
-			<td>2/2 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 160</th>
-			<td>1/1 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 159</th>
-			<td>4/5 blocks<br>Competitive: W-0, L-1</td>
-		</tr>
-		<tr>
-			<th>Epoch 158</th>
-			<td>7/7 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 157</th>
-			<td>6/6 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 156</th>
-			<td>0/1 block<br>Leader node got stuck and was 5 minutes slow to respond after 3 days up and running. Nothing else was running on the server when this happened.<br>UPDATE: Updated to 0.8.19</td>
-		</tr>
-		<tr>
-			<th>Epoch 155</th>
-			<td>3/3 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 154</th>
-			<td>4/4 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 153</th>
-			<td>2/2 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 152</th>
-			<td>5/5 blocks! シ<br>Competitive: W-1, L-0</td>
-		</tr>
-		<tr>
-			<th>Epoch 151</th>
-			<td>3/3 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 151</th>
-			<td>3/3 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 150</th>
-			<td>6/6 blocks! シ<br>Competitive: W-2, L-0</td>
-		</tr>
-		<tr>
-			<th>Epoch 149</th>
-			<td>6/6 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 148</th>
-			<td>4/5 blocks<br>Competitive: W-0, L-1</td>
-		</tr>
-		<tr>
-			<th>Epoch 147</th>
-			<td>2/2 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 146</th>
-			<td>3/4 blocks<br>Competitive: W-0, L-1</td>
-		</tr>
-		<tr>
-			<th>Epoch 145</th>
-			<td>3/3 blocks! シ<br>Competitive: W-2, L-0</td>
-		</tr>
-		<tr>
-			<th>Epoch 144</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 143</th>
-			<td>7/7 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 142</th>
-			<td>11/11 blocks! シ<br>Competitive: W-1, L-0</td>
-		</tr>
-		<tr>
-			<th>Epoch 141</th>
-			<td>5/6 blocks<br>Competitive: W-1, L-1</td>
-		</tr>
-		<tr>
-			<th>Epoch 140</th>
-			<td>5/5 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 139</th>
-			<td>11/11 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 138</th>
-			<td>12/12 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 137</th>
-			<td>7/7 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 136</th>
-			<td>6/6 blocks! シ<br>Competitive: W-1, L-0</td>
-		</tr>
-		<tr>
-			<th>Epoch 135</th>
-			<td>11/11 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 134</th>
-			<td>7/7 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 133</th>
-			<td>4/4 blocks! シ<br>Competitive: W-1, L-0</td>
-		</tr>
-		<tr>
-			<th>Epoch 132</th>
-			<td>4/5 blocks<br>Competitive: W-2, L-1</td>
-		</tr>
-		<tr>
-			<th>Epoch 131</th>
-			<td>2/2 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 130</th>
-			<td>4/4 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 129</th>
-			<td>7/7 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 128</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 127</th>
-			<td>2/2 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 126</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 125</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 124</th>
-			<td>2/2 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 123</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 122</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 121</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 120</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 119</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 118</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 117</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 116</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 115</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 114</th>
-			<td>1/2 blocks<br>Competitive: W-0, L-1</td>
-		</tr>
-		<tr>
-			<th>Epoch 113</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 112</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 111</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 110</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 109</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 108</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 107</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 106</th>
-			<td>0/1 block<br>This is why we can't have nice things.<br>Turning off Rosetta@home and Folding@home. ●︿●</td>
-		</tr>
-		<tr>
-			<th>Epoch 105</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 104</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 103</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 102</th>
-			<td>3/3 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 101</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 100</th>
-			<td>0/1 block<br>I've been renting out spare CPU and GPU time to Rosetta@home and Folding@home to help develop a vaccine for COVID-19. Block was missed by 1 second, so apparently Rosetta@home does not have a well working interrupt timer. Turned it off for now, will move it to a separate virtual server with lower CPU priority than Jörmungandr.</td>
-		</tr>
-		<tr>
-			<th>Epoch 99</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 98</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 97</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 96</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 95</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 94</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 93</th>
-			<td>2/2 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 92</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 91</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 90</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 89</th>
-			<td>5/5 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 88</th>
-			<td>4/5 blocks<br>An error caused Jörmungandr to become unresponsive, thus not being able to mint the block at all. It seems that this error was caused by a combination of a newer version JorManager and Jörmungandr 0.8.9-stable-alpha-6. This error has not occured again since upgrading Jörmungandr.</td>
-		</tr>
-		<tr>
-			<th>Epoch 87</th>
-			<td>5/5 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 86</th>
-			<td>2/2 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 85</th>
-			<td>5/5 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 84</th>
-			<td>4/4 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 83</th>
-			<td>4/4 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 82</th>
-			<td>0/2 blocks (╯°□°)╯︵ ┻━┻<br>Competitive: W-0, L-2</td>
-		</tr>
-		<tr>
-			<th>Epoch 81</th>
-			<td>9/9 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 80</th>
-			<td>5/6 blocks<br>Competitive: W-0, L-1</td>
-		</tr>
-		<tr>
-			<th>Epoch 79</th>
-			<td>5/6 blocks<br>Competitive: W-1, L-1</td>
-		</tr>
-		<tr>
-			<th>Epoch 78</th>
-			<td>2/2 blocks! シ</td>
-		<tr>
-			<th>Epoch 77</th>
-			<td>4/4 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 76</th>
-			<td>4/4 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 75</th>
-			<td>4/4 blocks! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 74</th>
-			<td>4/4 blocks! シ<br>Competitive: W-1, L-0</td>
-		</tr>
-		<tr>
-			<th>Epoch 73</th>
-			<td>1/1 block! シ
-		</tr>
-		<tr>
-			<th>Epoch 72</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 71</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 70</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 69</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 68</th>
-			<td>0/0 blocks</td>
-		</tr>
-		<tr>
-			<th>Epoch 67</th>
-			<td>1/1 block! シ</td>
-		</tr>
-		<tr>
-			<th>Epoch 66</th>
-			<td>0/0 blocks</td>
+			<th><a style="font-weight: normal;" href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></th>
+			<td><a href="https://t.me/PoolToolBot">PoolToolBot</a></td>
 		</tr>
 	</table>
 </div>
-<h2><a href="https://github.com/Kaze-Stake/kaze-stake.github.io/commits/master">History</a></h2>
 </body>
 </html>
