--- a/index.html
+++ b/index.html
@@ -137,13 +137,18 @@ td {
 	</table>
 </div>
 <h2>Pool ID</h2>
-<p> <a href="https://staking.cardano.org/en/delegation/">d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc</a></p>
+<p><a href="https://staking.cardano.org/en/delegation/">d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc (ITN)</a></p>
+<p>11eae8b077e7df1b311583ceaf6d2cb0d58a0b26ed8e98f0c0210ed5ede7c072 (HTN)</p>
 <h2>Statistics</h2>
 <div>
 	<table id="statistics-table">
 		<tr>
-			<th><a style="font-weight: normal;" href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></th>
+			<th><a style="font-weight: normal;" href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool (ITN)</a></th>
 			<td><a href="https://t.me/PoolToolBot">PoolToolBot</a></td>
+		</tr>
+		<tr>
+			<th><a style="font-weight: normal;" href="https://ff.pooltool.io/pool/11eae8b077e7df1b311583ceaf6d2cb0d58a0b26ed8e98f0c0210ed5ede7c072/manage">PoolTool (HTN)</a></th>
+			<td></td>
 		</tr>
 	</table>
 </div>
