Update HTN Stakepool ID

--- a/index.html
+++ b/index.html
@@ -113,10 +113,6 @@ td {
 			<th>Location</th>
 			<td>Sweden</td>
 		</tr>
-		<tr>
-			<th>Backup Node</th>
-			<td><a href="https://rockpi.org/rockpi4">Radxa Rock Pi 4B 4GB</a>,<br><a href="https://www.fotolog.cl/lenovo-sl700-ngff-m-2-2242-240g-ssd-sata3-up-to-540mb-s-read-speed/">Lenovo SL700 NVMe M.2 SSD 240GB</a>,<br><a href="https://www.ui.com/edgemax/edgerouter-x/">Ubiquiti Networks EdgeRouter X</a>,<br>Automated failover<br>Secondary location</td>
-		</tr>
 	</table>
 </div>
 <h2>Software</h2>
@@ -124,31 +120,22 @@ td {
 	<table>
 		<tr>
 			<th>Operating System</th>
-			<td>Windows 10 Pro N Hyper-V (Ubuntu 18.04 LTS)</td>
+			<td>Windows 10 Pro N Hyper-V (Ubuntu 20.04 LTS)</td>
 		</tr>
 		<tr>
-			<th>Jörmungandr Version</th>
-			<td>0.9.1</td>
-		</tr>
-		<tr>
-			<th>Node Manager</th>
-			<td><a href="https://bitbucket.org/muamw10/jormanager/src/develop/">JorManager 0.3.7</a> (3 nodes)</td>
+			<th>Cardano Node</th>
+			<td>1.15.1</td>
 		</tr>
 	</table>
 </div>
 <h2>Pool ID</h2>
-<p><a href="https://staking.cardano.org/en/delegation/">d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc (ITN)</a></p>
-<p>72a8b2e910571e5dce8ce94562f0344d8cd63ad77811a59477a5d872 (HTN)</p>
+<p><a href="https://staking.cardano.org/en/delegation/">72a8b2e910571e5dce8ce94562f0344d8cd63ad77811a59477a5d872</a> (Mainnet Candidate)</p>
 <h2>Statistics</h2>
 <div>
 	<table id="statistics-table">
 		<tr>
-			<th><a style="font-weight: normal;" href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool (ITN)</a></th>
-			<td><a href="https://t.me/PoolToolBot">PoolToolBot</a></td>
-		</tr>
-		<tr>
-			<th><a style="font-weight: normal;" href="https://ff.pooltool.io/pool/72a8b2e910571e5dce8ce94562f0344d8cd63ad77811a59477a5d872">PoolTool (HTN)</a></th>
-			<td></td>
+			<th><a style="font-weight: normal;" href="https://ff.pooltool.io/pool/72a8b2e910571e5dce8ce94562f0344d8cd63ad77811a59477a5d872">PoolTool</a></th>
+			<td>(Mainnet Candidate)</td>
 		</tr>
 	</table>
 </div>
