Updated site for mainnet

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ td {
 		</tr>
 		<tr>
 			<th>Storage</th>
-			<td><a href="https://www.samsung.com/semiconductor/minisite/ssd/product/consumer/970pro/#ge_semi_anchor_stand2">Samsung 970 PRO NVMe M.2 SSD 1TB (20/1200 TBW)</a></td>
+			<td><a href="https://www.samsung.com/semiconductor/minisite/ssd/product/consumer/970pro/#ge_semi_anchor_stand2">Samsung 970 PRO NVMe M.2 SSD 1TB</a></td>
 		</tr>
 		<tr>
 			<th>Power Supply</th>
@@ -108,7 +108,7 @@ td {
 		</tr>
 		<tr>
 			<th>Broadband Speed</th>
-			<td>1 Gbit/s</td>
+			<td>100 Mbit/s</td>
 		</tr>
 		<tr>
 			<th>Internet Service Provider</th>
@@ -117,6 +117,10 @@ td {
 		<tr>
 			<th>Location</th>
 			<td>Sweden</td>
+		</tr>
+		<tr>
+			<th>Relays' specifications</th>
+			<td><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50 (AMD Ryzen 5 4500U Processor)</a><br><a href="https://www.gskill.com/specification/2/197/1540866339/F4-3200C22D-64GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL22-22-22-52 1.2V 16GB</a><br><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
 		</tr>
 	</table>
 </div>
@@ -129,18 +133,24 @@ td {
 		</tr>
 		<tr>
 			<th>Cardano Node</th>
-			<td>1.15.1</td>
+			<td>1.18.0</td>
 		</tr>
 	</table>
 </div>
-<h2>Pool ID</h2>
-<p><a href="https://staking.cardano.org/en/delegation/">72a8b2e910571e5dce8ce94562f0344d8cd63ad77811a59477a5d872</a> (Mainnet Candidate)</p>
-<h2>Statistics</h2>
+<h2>Pool info</h2>
 <div>
-	<table id="statistics-table">
+	<table>
 		<tr>
-			<th><a style="font-weight: normal;" href="https://ff.pooltool.io/pool/72a8b2e910571e5dce8ce94562f0344d8cd63ad77811a59477a5d872">PoolTool</a></th>
-			<td>(Mainnet Candidate)</td>
+			<th>Pool ID</th>
+			<td><a href="https://pooltool.io/pool/828194edf77d6a55b5d0bf9da43bdb996676c5d538b9387ccde8be94">828194edf77d6a55b5d0bf9da43bdb996676c5d538b9387ccde8be94</a></td>
+		</tr>
+		<tr>
+			<th>Fixed fee</th>
+			<td>Lowest possible</td>
+		</tr>
+		<tr>
+			<th>Variable fee</th>
+			<td>2%</td>
 		</tr>
 	</table>
 </div>
