Added more pool info

--- a/index.html
+++ b/index.html
@@ -141,12 +141,16 @@ td {
 			<td><a href="https://pooltool.io/pool/828194edf77d6a55b5d0bf9da43bdb996676c5d538b9387ccde8be94">828194edf77d6a55b5d0bf9da43bdb996676c5d538b9387ccde8be94</a></td>
 		</tr>
 		<tr>
-			<th>Fixed fee</th>
-			<td>Lowest possible</td>
+			<th>Pool margin</th>
+			<td>1.337%</td>
 		</tr>
 		<tr>
-			<th>Variable fee</th>
-			<td>1.337%</td>
+			<th>Pledge</th>
+			<td>1,000,000 ADA</td>
+		</tr>
+		<tr>
+			<th>Cost per epoch</th>
+			<td>340 ADA</td>
 		</tr>
 	</table>
 </div>
