--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ td {
 		</tr>
 		<tr>
 			<th><br>Relays' specifications</th>
-			<td><br><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50 (AMD Ryzen 5 4500U Processor)</a><br><a href="https://www.gskill.com/specification/2/197/1540866339/F4-3200C22D-64GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL22-22-22-52 1.2V 16GB</a><br><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
+			<td style="line-height:22px"><br><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a><br><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores @ 2.3 GHz</a><br><a href="https://www.gskill.com/specification/2/197/1540866339/F4-3200C22D-64GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL22-22-22-52 1.2V 16GB</a><br><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
 		</tr>
 	</table>
 </div>
