Added meta charset

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="manifest" href="/site.webmanifest">
 	<meta name="msapplication-TileColor" content="#2d89ef">
 	<meta name="theme-color" content="#ffffff">
+  <meta charset="UTF-8">
 <title>K₳ZE</title>
 <style>
 body {
