--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ td {
 		</tr>
 		<tr>
 			<th>Processor</th>
-			<td><a href="https://ark.intel.com/content/www/us/en/ark/products/186604/intel-core-i7-9700k-processor-12m-cache-up-to-4-90-ghz.html">Intel Core i7-9700K 8-Cores 3.6 GHz (8-Cores OC @ 4.7 GHz)</a></td>
+			<td><a href="https://ark.intel.com/content/www/us/en/ark/products/186604/intel-core-i7-9700k-processor-12m-cache-up-to-4-90-ghz.html">Intel Core i7-9700K 8-Cores 3.6GHz (8-Cores OC @ 4.7GHz)</a></td>
 		</tr>
 		<tr>
 			<th>Memory</th>
@@ -117,7 +117,7 @@ td {
 		</tr>
 		<tr>
 			<th><br>Relays' specifications</th>
-			<td style="line-height:22px"><br><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18-18-18-43 1.2V 16GB</a><br><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
+			<td style="line-height:22px"><br><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a><br><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores @ 2.3GHz</a><br><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18-18-18-43 1.2V 16GB</a><br><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
 		</tr>
 	</table>
 </div>
@@ -126,7 +126,7 @@ td {
 	<table>
 		<tr>
 			<th>Operating System</th>
-			<td>Windows 10 Pro N Hyper-V (Ubuntu 20.04 LTS)</td>
+			<td>Windows 10 Pro N Hyper-V (Ubuntu 20.04.1 LTS)</td>
 		</tr>
 		<tr>
 			<th>Cardano Node</th>
