--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@ h2 {
 	font-size: 1.5em;
 	text-align: center;
 }
+h3 {
+	font-family: 'Courier New', Courier, monospace;
+	font-size: 1.25em;
+	text-align: center;
+}
 p {
 	font-family: 'Courier New', Courier, monospace;
 	font-size: 1em;
@@ -58,7 +63,124 @@ td {
 <h1>風</h1>
 <h2>Hardware &amp; Network</h2>
 <div>
+	<h3>Block Producer</h3>
 	<table>
+		<tr>
+			<th>Barebone</th>
+			<td><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a></td>
+		</tr>
+		<tr>
+			<th>Processor</th>
+			<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores @ 2.3GHz</a></td>
+		</tr>
+		<tr>
+			<th>Memory</th>
+			<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18-18-18-43 1.2V 16GB</a></td>
+		</tr>
+		<tr>
+			<th>Main Storage</th>
+			<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
+		</tr>
+		<tr>
+			<th>Backup Storage</th>
+			<td><a href="https://shop.westerndigital.com/products/internal-drives/wd-blue-3d-nand-sata-ssd#WDS500G2B0A">WD Blue 3D NAND SATA SSD 500GB</a></td>
+		</tr>
+		<tr>
+			<th>Network Router</th>
+			<td><a href="https://www.ui.com/edgemax/edgerouter-4/">Ubiquiti Networks EdgeRouter 4</a></td>
+		</tr>
+		<tr>
+			<th>Uninterruptible Power Supply</th>
+			<td><a href="https://powerwalker.com/index.php?page=product&item=10121068&lang=en">PowerWalker Basic VI 1000 SB 600W 1000VA</a></td>
+		</tr>
+		<tr>
+			<th>Broadband Speed</th>
+			<td>100 Mbit/s</td>
+		</tr>
+		<tr>
+			<th>Power Consumption</th>
+			<td>30W</td>
+		</tr>
+	</table>
+	<h3>Relay 1</h3>
+	<table>
+		<tr>
+			<th>Barebone</th>
+			<td><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a></td>
+		</tr>
+		<tr>
+			<th>Processor</th>
+			<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores @ 2.3GHz</a></td>
+		</tr>
+		<tr>
+			<th>Memory</th>
+			<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18-18-18-43 1.2V 16GB</a></td>
+		</tr>
+		<tr>
+			<th>Main Storage</th>
+			<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
+		</tr>
+		<tr>
+			<th>Backup Storage</th>
+			<td><a href="https://shop.westerndigital.com/products/internal-drives/wd-blue-3d-nand-sata-ssd#WDS500G2B0A">WD Blue 3D NAND SATA SSD 500GB</a></td>
+		</tr>
+		<tr>
+			<th>Network Router</th>
+			<td><a href="https://www.ui.com/edgemax/edgerouter-x/">Ubiquiti Networks EdgeRouter X</a></td>
+		</tr>
+		<tr>
+			<th>Uninterruptible Power Supply</th>
+			<td><a href="https://www.cyberpower.com/eu/en/product/sku/bu650e#specification">CyberPower BU650E 360W 650VA</a></td>
+		</tr>
+		<tr>
+			<th>Broadband Speed</th>
+			<td>100 Mbit/s</td>
+		</tr>
+		<tr>
+			<th>Power Consumption</th>
+			<td>22W</td>
+		</tr>
+	</table>
+	<h3>Relay 2</h3>
+	<table>
+		<tr>
+			<th>Barebone</th>
+			<td><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a></td>
+		</tr>
+		<tr>
+			<th>Processor</th>
+			<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores @ 2.3GHz</a></td>
+		</tr>
+		<tr>
+			<th>Memory</th>
+			<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18-18-18-43 1.2V 16GB</a></td>
+		</tr>
+		<tr>
+			<th>Main Storage</th>
+			<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
+		</tr>
+		<tr>
+			<th>Backup Storage</th>
+			<td><a href="https://shop.westerndigital.com/products/internal-drives/wd-blue-3d-nand-sata-ssd#WDS500G2B0A">WD Blue 3D NAND SATA SSD 500GB</a></td>
+		</tr>
+		<tr>
+			<th>Network Router</th>
+			<td><a href="https://www.ui.com/edgemax/edgerouter-x/">Ubiquiti Networks EdgeRouter X</a></td>
+		</tr>
+		<tr>
+			<th>Uninterruptible Power Supply</th>
+			<td><a href="https://www.cyberpower.com/eu/en/product/sku/bu650e#specification">CyberPower BU650E 360W 650VA</a></td>
+		</tr>
+		<tr>
+			<th>Broadband Speed</th>
+			<td>100 Mbit/s</td>
+		</tr>
+		<tr>
+			<th>Power Consumption</th>
+			<td>22W</td>
+		</tr>
+	</table>
+<!--<table>
 		<tr>
 			<th>Motherboard</th>
 			<td><a href="https://www.asus.com/us/Motherboards/ROG-STRIX-Z390-F-GAMING/specifications/">ASUS ROG STRIX Z390-F GAMING</a></td>
@@ -117,16 +239,21 @@ td {
 		</tr>
 		<tr>
 			<th><br>Relays' specifications</th>
-			<td style="line-height:22px"><br><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a><br><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores @ 2.3GHz</a><br><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18-18-18-43 1.2V 16GB</a><br><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
+			<td style="line-height:22px">
+				<br><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a>
+				<br><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores @ 2.3GHz</a>
+				<br><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18-18-18-43 1.2V 16GB</a>
+				<br><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a>
+			</td>
 		</tr>
-	</table>
+	</table>-->
 </div>
 <h2>Software</h2>
 <div>
 	<table>
 		<tr>
 			<th>Operating System</th>
-			<td>Windows 10 Pro N Hyper-V (Ubuntu 20.04.1 LTS)</td>
+			<td>Ubuntu 20.04.1 LTS</td>
 		</tr>
 		<tr>
 			<th>Cardano Node</th>
