--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ td {
 		</tr>
 		<tr>
 			<th>Network Router</th>
-			<td><a href="https://www.ui.com/edgemax/edgerouter-4/">Ubiquiti Networks EdgeRouter 4</a></td>
+			<td><a href="https://www.ui.com/edgemax/comparison/">Ubiquiti Networks EdgeRouter 4</a></td>
 		</tr>
 		<tr>
 			<th>Uninterruptible Power Supply</th>
@@ -98,11 +98,11 @@ td {
 			<td>100 Mbit/s</td>
 		</tr>
 		<tr>
-			<th>Power Consumption</th>
+			<th>Total Power Consumption</th>
 			<td>30W</td>
 		</tr>
 	</table>
-	<h3>Relay 1</h3>
+	<h3>Relay 1, Relay 2</h3>
 	<table>
 		<tr>
 			<th>Barebone</th>
@@ -126,7 +126,7 @@ td {
 		</tr>
 		<tr>
 			<th>Network Router</th>
-			<td><a href="https://www.ui.com/edgemax/edgerouter-x/">Ubiquiti Networks EdgeRouter X</a></td>
+			<td><a href="https://www.ui.com/edgemax/comparison/">Ubiquiti Networks EdgeRouter X</a></td>
 		</tr>
 		<tr>
 			<th>Uninterruptible Power Supply</th>
@@ -134,119 +134,13 @@ td {
 		</tr>
 		<tr>
 			<th>Broadband Speed</th>
-			<td>100 Mbit/s</td>
+			<td>100/50 Mbit/s</td>
 		</tr>
 		<tr>
-			<th>Power Consumption</th>
+			<th>Total Power Consumption</th>
 			<td>22W</td>
 		</tr>
 	</table>
-	<h3>Relay 2</h3>
-	<table>
-		<tr>
-			<th>Barebone</th>
-			<td><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a></td>
-		</tr>
-		<tr>
-			<th>Processor</th>
-			<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores @ 2.3GHz</a></td>
-		</tr>
-		<tr>
-			<th>Memory</th>
-			<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18-18-18-43 1.2V 16GB</a></td>
-		</tr>
-		<tr>
-			<th>Main Storage</th>
-			<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
-		</tr>
-		<tr>
-			<th>Backup Storage</th>
-			<td><a href="https://shop.westerndigital.com/products/internal-drives/wd-blue-3d-nand-sata-ssd#WDS500G2B0A">WD Blue 3D NAND SATA SSD 500GB</a></td>
-		</tr>
-		<tr>
-			<th>Network Router</th>
-			<td><a href="https://www.ui.com/edgemax/edgerouter-x/">Ubiquiti Networks EdgeRouter X</a></td>
-		</tr>
-		<tr>
-			<th>Uninterruptible Power Supply</th>
-			<td><a href="https://www.cyberpower.com/eu/en/product/sku/bu650e#specification">CyberPower BU650E 360W 650VA</a></td>
-		</tr>
-		<tr>
-			<th>Broadband Speed</th>
-			<td>100 Mbit/s</td>
-		</tr>
-		<tr>
-			<th>Power Consumption</th>
-			<td>22W</td>
-		</tr>
-	</table>
-<!--<table>
-		<tr>
-			<th>Motherboard</th>
-			<td><a href="https://www.asus.com/us/Motherboards/ROG-STRIX-Z390-F-GAMING/specifications/">ASUS ROG STRIX Z390-F GAMING</a></td>
-		</tr>
-		<tr>
-			<th>Processor</th>
-			<td><a href="https://ark.intel.com/content/www/us/en/ark/products/186604/intel-core-i7-9700k-processor-12m-cache-up-to-4-90-ghz.html">Intel Core i7-9700K 8-Cores 3.6GHz (8-Cores OC @ 4.7GHz)</a></td>
-		</tr>
-		<tr>
-			<th>Memory</th>
-			<td><a href="https://www.gskill.com/specification/165/168/1536228574/F4-3200C16Q-64GTZSK-Specification">G.Skill Trident Z DDR4 3200MHz CL16-18-18-38 1.35V 64GB</a></td>
-		</tr>
-		<tr>
-			<th>Storage</th>
-			<td><a href="https://www.samsung.com/semiconductor/minisite/ssd/product/consumer/970pro/#ge_semi_anchor_stand2">Samsung 970 PRO NVMe M.2 SSD 1TB</a></td>
-		</tr>
-		<tr>
-			<th>Power Supply</th>
-			<td><a href="https://www.bequiet.com/en/powersupply/611#technische-daten">Be Quiet! Dark Power Pro 11 550W</a></td>
-		</tr>
-		<tr>
-			<th>Air Cooling</th>
-			<td><a href="https://www.bequiet.com/en/cpucooler/1378#technische-daten">Be Quiet! Dark Rock Pro 4</a></td>
-		</tr>
-		<tr>
-			<th></th>
-			<td><a href="https://www.bequiet.com/en/casefans/717">Be Quiet! Silent Wings 3 PWM 140mm (4x)</a></td>
-		</tr>
-		<tr>
-			<th></th>
-			<td><a href="https://www.bequiet.com/en/casefans/718">Be Quiet! Silent Wings 3 PWM 120mm (2x)</a></td>
-		</tr>
-		<tr>
-			<th>Chassi</th>
-			<td><a href="https://www.fractal-design.com/products/cases/define/define-c/black/#specifications">Fractal Design Define C</a></td>
-		</tr>
-		<tr>
-			<th>Uninterruptible Power Supply</th>
-			<td><a href="https://powerwalker.com/?page=product%26item=10121068">PowerWalker Basic VI 1000 SB 600W 1000VA</a></td>
-		</tr>
-		<tr>
-			<th>Network Interface Card</th>
-			<td><a href="https://store.mellanox.com/products/mellanox-mcx4121a-acat-connectx-4-lx-en-network-interface-card-25gbe-dual-port-sfp28-pcie3-0-x8-rohs-r6.html">Mellanox ConnectX-4 MCX4121A-ACAT</a></td>
-		</tr>
-		<tr>
-			<th>Network Router</th>
-			<td><a href="https://www.ui.com/edgemax/edgerouter-4/">Ubiquiti Networks EdgeRouter 4</a></td>
-		</tr>
-		<tr>
-			<th>Broadband Speed</th>
-			<td>100 Mbit/s</td>
-		</tr>
-		<tr>
-			<th>Location</th>
-			<td>Sweden</td>
-		</tr>
-		<tr>
-			<th><br>Relays' specifications</th>
-			<td style="line-height:22px">
-				<br><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a>
-				<br><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores @ 2.3GHz</a>
-				<br><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18-18-18-43 1.2V 16GB</a>
-				<br><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a>
-			</td>
-		</tr>
-	</table>-->
 </div>
 <h2>Software</h2>
 <div>
@@ -257,7 +151,7 @@ td {
 		</tr>
 		<tr>
 			<th>Cardano Node</th>
-			<td>1.19.0</td>
+			<td>1.19.1</td>
 		</tr>
 	</table>
 </div>
