--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
 <html>
 <head>
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -71,15 +71,15 @@ td {
 		</tr>
 		<tr>
 			<th>Processor</th>
-			<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores @ 2.3GHz</a></td>
+			<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores 2.3GHz</a></td>
 		</tr>
 		<tr>
 			<th>Memory</th>
-			<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18-18-18-43 1.2V 16GB</a></td>
+			<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18 1.2V 16GB</a></td>
 		</tr>
 		<tr>
 			<th>Main Storage</th>
-			<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
+			<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe PCIe SSD 500GB</a></td>
 		</tr>
 		<tr>
 			<th>Backup Storage</th>
@@ -102,7 +102,7 @@ td {
 			<td>30W</td>
 		</tr>
 	</table>
-	<h3>Relay 1, Relay 2</h3>
+	<h3>Relay 1 &amp; Relay 2</h3>
 	<table>
 		<tr>
 			<th>Barebone</th>
@@ -110,15 +110,15 @@ td {
 		</tr>
 		<tr>
 			<th>Processor</th>
-			<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores @ 2.3GHz</a></td>
+			<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores 2.3GHz</a></td>
 		</tr>
 		<tr>
 			<th>Memory</th>
-			<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18-18-18-43 1.2V 16GB</a></td>
+			<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18 1.2V 16GB</a></td>
 		</tr>
 		<tr>
 			<th>Main Storage</th>
-			<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe M.2 SSD 500GB</a></td>
+			<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe PCIe SSD 500GB</a></td>
 		</tr>
 		<tr>
 			<th>Backup Storage</th>
@@ -134,11 +134,11 @@ td {
 		</tr>
 		<tr>
 			<th>Broadband Speed</th>
-			<td>100/50 Mbit/s</td>
+			<td>100 Mbit/s</td>
 		</tr>
 		<tr>
 			<th>Total Power Consumption</th>
-			<td>22W</td>
+			<td>22 W</td>
 		</tr>
 	</table>
 </div>
@@ -147,7 +147,7 @@ td {
 	<table>
 		<tr>
 			<th>Operating System</th>
-			<td>Ubuntu 20.04.1 LTS</td>
+			<td>Linux 64-bit (Ubuntu 20.04.1 LTS)</td>
 		</tr>
 		<tr>
 			<th>Cardano Node</th>
