--- a/index.html
+++ b/index.html
@@ -1,176 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<title>Kaze Network</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
 	<meta name="msapplication-TileColor" content="#2d89ef">
 	<meta name="theme-color" content="#ffffff">
-  <meta charset="UTF-8">
-<title>K₳ZE</title>
-<style>
-body {
-	background-color:  #101721;
-	color: #f5f7fA;
-}
-h1 {
-	font-size: 16em;
-	text-align: center;
-	margin: 0;
-}
-h2 {
-	font-family: 'Courier New', Courier, monospace;
-	font-size: 1.5em;
-	text-align: center;
-}
-h3 {
-	font-family: 'Courier New', Courier, monospace;
-	font-size: 1.25em;
-	text-align: center;
-}
-p {
-	font-family: 'Courier New', Courier, monospace;
-	font-size: 1em;
-	text-align: center;
-}
-a, a:link, a:visited, a:active {
-	color: #4fc1e9;
-	text-decoration: none;
-}
-table {
-	font-family: 'Courier New', Courier, monospace;
-	font-size: 1em;
-	margin-left: auto;
-	margin-right: auto;
-}
-th {
-	text-align: right;
-	padding-right: 1em;
-	width: 35em;
-}
-td {
-	text-align: left;
-	padding-left: 1em;
-	width: 35em;
-}
-#statistics-table {
-	line-height: 2em;
-}
-</style>
+	<style>
+		body {
+			background-color:  #101721;
+			color: #f5f7fA;
+		}
+		h1 {
+			font-size: 16em;
+			text-align: center;
+			margin: 0;
+		}
+		h2 {
+			font-family: 'Courier New', Courier, monospace;
+			font-size: 1.5em;
+			text-align: center;
+		}
+		h3 {
+			font-family: 'Courier New', Courier, monospace;
+			font-size: 1.25em;
+			text-align: center;
+		}
+		p {
+			font-family: 'Courier New', Courier, monospace;
+			font-size: 1em;
+			text-align: center;
+		}
+		a, a:link, a:visited, a:active {
+			color: #4fc1e9;
+			text-decoration: none;
+		}
+		table {
+			font-family: 'Courier New', Courier, monospace;
+			font-size: 1em;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		th {
+			text-align: right;
+			padding-right: 1em;
+			width: 35em;
+		}
+		td {
+			text-align: left;
+			padding-left: 1em;
+			width: 35em;
+		}
+		#statistics-table {
+			line-height: 2em;
+		}
+	</style>
 </head>
 <body>
-<h1>風</h1>
-<h2>Hardware &amp; Network</h2>
-<div>
-	<h3>Block Producer</h3>
-	<table>
-		<tr>
-			<th>Barebone</th>
-			<td><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a></td>
-		</tr>
-		<tr>
-			<th>Processor</th>
-			<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores 2.3GHz</a></td>
-		</tr>
-		<tr>
-			<th>Memory</th>
-			<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18 1.2V 16GB</a></td>
-		</tr>
-		<tr>
-			<th>Main Storage</th>
-			<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe PCIe SSD 500GB</a></td>
-		</tr>
-		<tr>
-			<th>Backup Storage</th>
-			<td><a href="https://shop.westerndigital.com/products/internal-drives/wd-blue-3d-nand-sata-ssd#WDS500G2B0A">WD Blue 3D NAND SATA SSD 500GB</a></td>
-		</tr>
-		<tr>
-			<th>Network Router</th>
-			<td><a href="https://www.ui.com/edgemax/comparison/">Ubiquiti Networks EdgeRouter 4</a></td>
-		</tr>
-		<tr>
-			<th>Uninterruptible Power Supply</th>
-			<td><a href="https://powerwalker.com/index.php?page=product&item=10121068&lang=en">PowerWalker Basic VI 1000 SB 600W 1000VA</a></td>
-		</tr>
-		<tr>
-			<th>Broadband Speed</th>
-			<td>100 Mbit/s</td>
-		</tr>
-		<tr>
-			<th>Total Power Consumption</th>
-			<td>30 W</td>
-		</tr>
-	</table>
-	<h3>Relay 1 &amp; Relay 2</h3>
-	<table>
-		<tr>
-			<th>Barebone</th>
-			<td><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a></td>
-		</tr>
-		<tr>
-			<th>Processor</th>
-			<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores 2.3GHz</a></td>
-		</tr>
-		<tr>
-			<th>Memory</th>
-			<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18 1.2V 16GB</a></td>
-		</tr>
-		<tr>
-			<th>Main Storage</th>
-			<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe PCIe SSD 500GB</a></td>
-		</tr>
-		<tr>
-			<th>Backup Storage</th>
-			<td><a href="https://shop.westerndigital.com/products/internal-drives/wd-blue-3d-nand-sata-ssd#WDS500G2B0A">WD Blue 3D NAND SATA SSD 500GB</a></td>
-		</tr>
-		<tr>
-			<th>Network Router</th>
-			<td><a href="https://www.ui.com/edgemax/comparison/">Ubiquiti Networks EdgeRouter X</a></td>
-		</tr>
-		<tr>
-			<th>Uninterruptible Power Supply</th>
-			<td><a href="https://www.cyberpower.com/eu/en/product/sku/bu650e#specification">CyberPower BU650E 360W 650VA</a></td>
-		</tr>
-		<tr>
-			<th>Broadband Speed</th>
-			<td>100 Mbit/s</td>
-		</tr>
-		<tr>
-			<th>Total Power Consumption</th>
-			<td>22 W</td>
-		</tr>
-	</table>
-</div>
-<h2>Software</h2>
-<div>
-	<table>
-		<tr>
-			<th>Operating System</th>
-			<td>Linux 64-bit (Ubuntu 20.04.1 LTS)</td>
-		</tr>
-		<tr>
-			<th>Cardano Node</th>
-			<td>1.19.1</td>
-		</tr>
-	</table>
-</div>
-<h2>Pool info</h2>
-<div>
-	<table>
-		<tr>
-			<th>Pool ID</th>
-			<td><a href="https://pooltool.io/pool/828194edf77d6a55b5d0bf9da43bdb996676c5d538b9387ccde8be94">828194edf77d6a55b5d0bf9da43bdb996676c5d538b9387ccde8be94</a></td>
-		</tr>
-		<tr>
-			<th>Pool margin</th>
-			<td>1.337%</td>
-		</tr>
-		<tr>
-			<th>Pledge</th>
-			<td>1,000,000 ADA</td>
-		</tr>
-	</table>
-</div>
+	<h1>風</h1>
+	<h2>Hardware &amp; Network</h2>
+	<div>
+		<h3>Block Producer</h3>
+		<table>
+			<tr>
+				<th>Barebone</th>
+				<td><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a></td>
+			</tr>
+			<tr>
+				<th>Processor</th>
+				<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores 2.3GHz</a></td>
+			</tr>
+			<tr>
+				<th>Memory</th>
+				<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18 1.2V 16GB</a></td>
+			</tr>
+			<tr>
+				<th>Main Storage</th>
+				<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe PCIe SSD 500GB</a></td>
+			</tr>
+			<tr>
+				<th>Backup Storage</th>
+				<td><a href="https://shop.westerndigital.com/products/internal-drives/wd-blue-3d-nand-sata-ssd#WDS500G2B0A">WD Blue 3D NAND SATA SSD 500GB</a></td>
+			</tr>
+			<tr>
+				<th>Network Router</th>
+				<td><a href="https://www.ui.com/edgemax/comparison/">Ubiquiti Networks EdgeRouter 4</a></td>
+			</tr>
+			<tr>
+				<th>Uninterruptible Power Supply</th>
+				<td><a href="https://powerwalker.com/index.php?page=product&item=10121068&lang=en">PowerWalker Basic VI 1000 SB 600W 1000VA</a></td>
+			</tr>
+			<tr>
+				<th>Broadband Speed</th>
+				<td>100 Mbit/s</td>
+			</tr>
+			<tr>
+				<th>Total Power Consumption</th>
+				<td>30 W</td>
+			</tr>
+		</table>
+		<h3>Relay 1 &amp; Relay 2</h3>
+		<table>
+			<tr>
+				<th>Barebone</th>
+				<td><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a></td>
+			</tr>
+			<tr>
+				<th>Processor</th>
+				<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores 2.3GHz</a></td>
+			</tr>
+			<tr>
+				<th>Memory</th>
+				<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18 1.2V 16GB</a></td>
+			</tr>
+			<tr>
+				<th>Main Storage</th>
+				<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe PCIe SSD 500GB</a></td>
+			</tr>
+			<tr>
+				<th>Backup Storage</th>
+				<td><a href="https://shop.westerndigital.com/products/internal-drives/wd-blue-3d-nand-sata-ssd#WDS500G2B0A">WD Blue 3D NAND SATA SSD 500GB</a></td>
+			</tr>
+			<tr>
+				<th>Network Router</th>
+				<td><a href="https://www.ui.com/edgemax/comparison/">Ubiquiti Networks EdgeRouter X</a></td>
+			</tr>
+			<tr>
+				<th>Uninterruptible Power Supply</th>
+				<td><a href="https://www.cyberpower.com/eu/en/product/sku/bu650e#specification">CyberPower BU650E 360W 650VA</a></td>
+			</tr>
+			<tr>
+				<th>Broadband Speed</th>
+				<td>100 Mbit/s</td>
+			</tr>
+			<tr>
+				<th>Total Power Consumption</th>
+				<td>22 W</td>
+			</tr>
+		</table>
+	</div>
+	<h2>Software</h2>
+	<div>
+		<table>
+			<tr>
+				<th>Operating System</th>
+				<td>Linux 64-bit (Ubuntu 20.04.1 LTS)</td>
+			</tr>
+			<tr>
+				<th>Cardano Node</th>
+				<td>1.19.1</td>
+			</tr>
+		</table>
+	</div>
+	<h2>Pool info</h2>
+	<div>
+		<table>
+			<tr>
+				<th>Pool ID</th>
+				<td><a href="https://pooltool.io/pool/828194edf77d6a55b5d0bf9da43bdb996676c5d538b9387ccde8be94">828194edf77d6a55b5d0bf9da43bdb996676c5d538b9387ccde8be94</a></td>
+			</tr>
+			<tr>
+				<th>Pool margin</th>
+				<td>1.337%</td>
+			</tr>
+			<tr>
+				<th>Pledge</th>
+				<td>1,000,000 ADA</td>
+			</tr>
+		</table>
+	</div>
 </body>
 </html>
