--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
 			</tr>
 			<tr>
 				<th>Broadband Speed</th>
-				<td>100 Mbit/s</td>
+				<td>100/100 Mbit/s</td>
 			</tr>
 			<tr>
 				<th>Total Power Consumption</th>
 				<td>30 W</td>
 			</tr>
 		</table>
-		<h3>Relay 1 &amp; Relay 2</h3>
+		<h3>Relay 1</h3>
 		<table>
 			<tr>
 				<th>Barebone</th>
@@ -134,7 +134,46 @@
 			</tr>
 			<tr>
 				<th>Broadband Speed</th>
-				<td>100 Mbit/s</td>
+				<td>100/50 Mbit/s</td>
+			</tr>
+			<tr>
+				<th>Total Power Consumption</th>
+				<td>22 W</td>
+			</tr>
+		</table>
+		<h3>Relay 2</h3>
+		<table>
+			<tr>
+				<th>Barebone</th>
+				<td><a href="https://www.asus.com/us/Mini-PCs/Mini-PC-PN50/specifications/">ASUS Mini PC PN50</a></td>
+			</tr>
+			<tr>
+				<th>Processor</th>
+				<td><a href="https://www.amd.com/en/products/apu/amd-ryzen-5-4500u">AMD Ryzen 5 4500U, 6-Cores 2.3GHz</a></td>
+			</tr>
+			<tr>
+				<th>Memory</th>
+				<td><a href="https://gskill.com/specification/2/197/1594019055/F4-3200C18D-16GRS-Specification">G.Skill Ripjaws DDR4 3200MHz CL18 1.2V 16GB</a></td>
+			</tr>
+			<tr>
+				<th>Main Storage</th>
+				<td><a href="https://www.kingston.com/en/ssd/a2000-nvme-pcie-ssd?Capacity=500GB">Kingston A2000 NVMe PCIe SSD 500GB</a></td>
+			</tr>
+			<tr>
+				<th>Backup Storage</th>
+				<td><a href="https://shop.westerndigital.com/products/internal-drives/wd-blue-3d-nand-sata-ssd#WDS500G2B0A">WD Blue 3D NAND SATA SSD 500GB</a></td>
+			</tr>
+			<tr>
+				<th>Network Router</th>
+				<td><a href="https://www.ui.com/edgemax/comparison/">Ubiquiti Networks EdgeRouter X</a></td>
+			</tr>
+			<tr>
+				<th>Uninterruptible Power Supply</th>
+				<td><a href="https://www.cyberpower.com/eu/en/product/sku/bu650e#specification">CyberPower BU650E 360W 650VA</a></td>
+			</tr>
+			<tr>
+				<th>Broadband Speed</th>
+				<td>100/50 Mbit/s</td>
 			</tr>
 			<tr>
 				<th>Total Power Consumption</th>
